--- a/composer.json
+++ b/composer.json
@@ -12,55 +12,47 @@
     ],
     "autoload": {
         "psr-4": {
-            "MF\\ConsoleSubscriber\\": "src"
+            "MF\\ConsoleSubscriber\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "MF\\Tests\\": "tests"
+            "MF\\ConsoleSubscriber\\": "tests/"
         }
     },
     "require": {
-        "php": ">=7.1",
-        "symfony/console": ">= 3.0 || >= 4.0",
-        "symfony/event-dispatcher": ">= 3.0 || >= 4.0"
+        "php": "^7.4",
+        "symfony/console": "^5.0",
+        "symfony/event-dispatcher": "^5.0"
     },
     "require-dev": {
-        "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^6.0",
-        "satooshi/php-coveralls": "^1.0",
-        "squizlabs/php_codesniffer": "^2.8"
+        "lmc/coding-standard": "^3.0",
+        "mockery/mockery": "^1.4",
+        "phpstan/extension-installer": "^1.1",
+        "phpstan/phpstan": "^0.12.83",
+        "phpstan/phpstan-mockery": "^0.12.13",
+        "phpstan/phpstan-phpunit": "^0.12.18",
+        "phpunit/phpunit": "^9.5"
     },
     "config": {
         "bin-dir": "bin",
         "sort-packages": true
     },
     "scripts": {
-        "test": [
-            "@installTools",
+        "all": [
+            "@analyze",
+            "@tests-ci"
+        ],
+        "analyze": [
             "@cs",
-            "@phpunit",
             "@phpstan"
         ],
-        "cs": "bin/phpcs --standard=ruleset.xml .",
-        "phpunit": "bin/phpunit -c phpunit.xml.dist",
-        "phpstan": [
-            "@linkTools",
-            "bin/phpstan analyse -l 5 -c phpstan.neon src tests"
-        ],
+        "cs": "bin/ecs check --ansi -- src/ tests/",
+        "phpstan": "bin/phpstan analyze src tests -c phpstan.neon --ansi --level 7",
+        "tests": "bin/phpunit",
+        "tests-ci": "php -dxdebug.coverage_enable=1 bin/phpunit -c phpunit.xml.dist",
         "fix": [
-            "@linkTools",
-            "bin/php-cs-fixer fix src",
-            "bin/php-cs-fixer fix tests",
-            "bin/phpcbf --standard=ruleset.xml ."
-        ],
-        "installTools": [
-            "cd tools/csfixer && composer install && cd ../..",
-            "cd tools/phpstan && composer install && cd ../.."
-        ],
-        "linkTools": [
-            "cd bin && ln -sf ../tools/csfixer/vendor/bin/php-cs-fixer php-cs-fixer && cd ..",
-            "cd bin && ln -sf ../tools/phpstan/vendor/bin/phpstan phpstan && cd .."
+            "bin/ecs check --ansi --clear-cache --fix -- src/ tests/"
         ]
     }
 }
