--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,41 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- http://phpunit.de/manual/current/en/appendixes.configuration.html -->
-<phpunit
-    backupGlobals               = "false"
-    backupStaticAttributes      = "false"
-    colors                      = "true"
-    convertErrorsToExceptions   = "true"
-    convertNoticesToExceptions  = "true"
-    convertWarningsToExceptions = "true"
-    processIsolation            = "false"
-    stopOnFailure               = "false"
-    syntaxCheck                 = "false"
-    beStrictAboutTestsThatDoNotTestAnything = "false"
-    bootstrap                   = "vendor/autoload.php">
+<!-- https://phpunit.de/manual/current/en/appendixes.configuration.html -->
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
+         colors="true"
+         bootstrap="vendor/autoload.php"
+>
 
-    <testsuites>
-        <testsuite name="MF\SymfonyConsoleSubscriber Test Suite">
-            <directory>./tests</directory>
-        </testsuite>
-    </testsuites>
-
-    <filter>
-        <whitelist addUncoveredFilesFromWhitelist="true">
+    <coverage>
+        <include>
             <directory suffix=".php">src</directory>
-        </whitelist>
-    </filter>
+        </include>
+        <report>
+            <clover outputFile="./code-coverage/clover.xml"/>
+            <html outputDirectory="./code-coverage" highLowerBound="90"/>
+        </report>
+    </coverage>
 
-    <logging>
-        <log type="coverage-html" target="./code-coverage" title="MF\SymfonyConsoleSubscriber"
-             charset="UTF-8" yui="true" highlight="true"
-             lowUpperBound="35" highLowerBound="90"/>
-
-        <log type="coverage-clover" target="./code-coverage/clover.xml"/>
-        <log type="junit" target="./code-coverage/junit.xml" logIncompleteSkipped="false"/>
-    </logging>
     <php>
         <!-- E_ALL = 30719 -->
         <ini name="error_reporting" value="30719"/>
     </php>
+
+    <testsuites>
+        <testsuite name="MF\SymfonyConsoleSubscriber Test Suite">
+            <directory>tests</directory>
+        </testsuite>
+    </testsuites>
+
+    <logging>
+        <junit outputFile="./code-coverage/junit.xml"/>
+    </logging>
 </phpunit>
