--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -12,7 +12,7 @@ jobs:
 
         strategy:
             matrix:
-                php-version: ['8.0']
+                php-version: ['8.0', '8.1']
                 dependencies: ['']
                 include:
                     - { php-version: '8.0', dependencies: '--prefer-lowest --prefer-stable' }
