--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,30 @@
 {
     "name": "mf/symfony-console-subscriber",
     "description": "Console Subscriber for Symfony Console",
-    "type": "library",
     "license": "MIT",
+    "type": "library",
     "authors": [
         {
             "name": "Petr Chromec",
             "email": "mortal_flesh@seznam.cz"
         }
     ],
+    "require": {
+        "php": "^8.1",
+        "symfony/console": "^5.0 || ^6.0",
+        "symfony/event-dispatcher": "^5.0 || ^6.0"
+    },
+    "require-dev": {
+        "ergebnis/composer-normalize": "^2.28",
+        "lmc/coding-standard": "^3.3",
+        "mockery/mockery": "^1.4",
+        "php-parallel-lint/php-parallel-lint": "^1.3",
+        "phpstan/extension-installer": "^1.1",
+        "phpstan/phpstan": "^1.8",
+        "phpstan/phpstan-mockery": "^1.1",
+        "phpstan/phpstan-phpunit": "^1.1",
+        "phpunit/phpunit": "^9.5.20"
+    },
     "autoload": {
         "psr-4": {
             "MF\\ConsoleSubscriber\\": "src/"
@@ -19,31 +35,19 @@
             "MF\\ConsoleSubscriber\\": "tests/"
         }
     },
-    "require": {
-        "php": "^8.0",
-        "symfony/console": "^5.0",
-        "symfony/event-dispatcher": "^5.0"
-    },
-    "require-dev": {
-        "lmc/coding-standard": "^3.2",
-        "mockery/mockery": "^1.4",
-        "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan": "^1.4",
-        "phpstan/phpstan-mockery": "^1.0",
-        "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^9.5"
-    },
     "config": {
-        "bin-dir": "bin",
-        "sort-packages": true,
         "allow-plugins": {
             "composer/package-versions-deprecated": true,
             "dealerdirect/phpcodesniffer-composer-installer": true,
-            "phpstan/extension-installer": true
-        }
+            "phpstan/extension-installer": true,
+            "ergebnis/composer-normalize": true
+        },
+        "bin-dir": "bin",
+        "sort-packages": true
     },
     "scripts": {
         "all": [
+            "@lint",
             "@analyze",
             "@tests-ci"
         ],
@@ -52,11 +56,17 @@
             "@phpstan"
         ],
         "cs": "bin/ecs check --ansi -- src/ tests/",
-        "phpstan": "bin/phpstan analyze src tests -c phpstan.neon --ansi --level 7",
-        "tests": "bin/phpunit",
-        "tests-ci": "php -dxdebug.coverage_enable=1 bin/phpunit -c phpunit.xml.dist",
         "fix": [
+            "@composer normalize",
             "bin/ecs check --ansi --clear-cache --fix -- src/ tests/"
-        ]
+        ],
+        "lint": [
+            "@composer validate",
+            "@composer normalize --dry-run",
+            "bin/parallel-lint -j 10 -e php ./src ./tests ecs.php"
+        ],
+        "phpstan": "bin/phpstan analyze src tests -c phpstan.neon --ansi --level 8",
+        "tests": "bin/phpunit",
+        "tests-ci": "php -dxdebug.coverage_enable=1 bin/phpunit -c phpunit.xml.dist"
     }
 }
